--- a/templates/yolo.html
+++ b/templates/yolo.html
@@ -84,7 +84,7 @@
     </style>
 </head>
 <body>
-    <h1>실시간 침입자 감지 시스템</h1>
+    <h1>🚨 실시간 침입자 감지 시스템 🚨</h1>
     <div class="button-container">
         <button onclick="fetch('/start_detection')">
             🔒 침입 감지 시작
@@ -130,5 +130,4 @@
     </script>
 </body>
 </html>
-
 
