--- a/templates/index.html
+++ b/templates/index.html
@@ -88,7 +88,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>시스템 비정상적 접근(해킹) 탐지 기능</h1>
+        <h1>🚧시스템 비정상적 접근(해킹) 탐지 기능</h1>
         <p id="instruction">강아지를 선택하세요.</p>
         <div class="grid" id="imageGrid"></div>
         <button id="submitBtn">OK</button>
