Add Tuned Chatbot

--- a/templates/home.html
+++ b/templates/home.html
@@ -80,7 +80,8 @@
         </div>
         <h2>보안요원을 위한 종합 AI 관제 플랫폼</h2>
         <div class="btn-container">
-            <a href="/langchain" class="button">매뉴얼 챗봇</a>
+            <a href="/economy_chatbot" class="button">이코노미 매뉴얼 챗봇</a>
+            <a href="/langchain" class="button">프리미엄 매뉴얼 챗봇</a>
             <a href="/yolo" class="button">위험 탐지</a>
         </div>
     </div>
