Add ShieldU logo
Added ShieldU logo on tab icons and "home.html" file.
Edited ".brand .emoji" css.

--- a/templates/home.html
+++ b/templates/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ShieldU - 홈 페이지</title>
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='ShieldU.png') }}">
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -37,6 +38,9 @@
             margin-bottom: 20px;
         }
         .brand .emoji {
+            display: flex;
+            justify-content: center;
+            align-items: center;
             margin-right: 15px; /* 이모지와 텍스트 간격 */
         }
         h2 {
@@ -75,7 +79,7 @@
     <div class="container">
         <!-- 방패 이모지와 텍스트를 나란히 크게 배치 -->
         <div class="brand">
-            <div class="emoji">🛡️</div>
+            <div class="emoji"><img src="../static/ShieldU.png" alt="logo" width="40"/></div>
             <div>ShieldU</div>
         </div>
         <h2>보안요원을 위한 종합 AI 관제 플랫폼</h2>
