--- a/templates/yolo.html
+++ b/templates/yolo.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>실시간 침입자 감지 시스템</title>
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='ShieldU.png') }}">
     <style>
         body {
             background-color: #f4f4f4;
